# vp

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml  vp_build_brief.md
vp/: hooks.py  install.py  patches.txt  tasks.py
vp/api/: artwork.py  common.py  dashboard.py  nvl.py  public.py  vanban.py
vp/fixtures/: role.json  vp_danh_muc.json  vp_loai_van_ban.json
vp/patches/: remove_phien_ban_van_ban.py
vp/public/vp/css/: vp.css
vp/public/vp/js/: api.js  main.js  router.js  ui.js
vp/public/vp/js/views/: artwork_detail.js  artwork_grid.js  dashboard.js  nvl.js  vanban_detail.js  vanban_list.js
vp/vp/doctype/vp_artwork/: vp_artwork.json  vp_artwork.py
vp/vp/doctype/vp_danh_muc/: vp_danh_muc.json  vp_danh_muc.py
vp/vp/doctype/vp_ho_so_nvl/: vp_ho_so_nvl.json  vp_ho_so_nvl.py
vp/vp/doctype/vp_loai_van_ban/: vp_loai_van_ban.json  vp_loai_van_ban.py
vp/vp/doctype/vp_phien_ban_artwork/: vp_phien_ban_artwork.json  vp_phien_ban_artwork.py
vp/vp/doctype/vp_phien_ban_van_ban/: vp_phien_ban_van_ban.json  vp_phien_ban_van_ban.py
vp/vp/doctype/vp_van_ban/: vp_van_ban.json  vp_van_ban.py
vp/www/: vb.html  vb.py  vp.html  vp.py
