[project]
name = "vp"
authors = [
    { name = "RVHG", email = "it@rongvanghoanggia.com" }
]
description = "Văn Phòng — quản lý văn bản ban hành, hồ sơ NVL, artwork bao bì (Frappe/ERPNext v16)"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "vp"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
